<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StatusFragment"
    android:id="@+id/status_fragment"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scopeList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            tools:listitem="@layout/cardview_statusone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
            <androidx.cardview.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="12dp">
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5">
                        <TextView
                            android:id="@+id/employeeDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="1"/>
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:fillViewport="true"
                            android:scrollbars="vertical"
                            android:layout_weight="2">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/displayStaffDetails"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    android:textSize="15sp"
                                    android:textStyle="bold">
                                </TextView>
                            </LinearLayout>
                        </ScrollView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="2">
                        <TextView
                            android:id="@+id/samplingDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/black"
                            android:layout_weight="1"/>
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:fillViewport="true"
                            android:scrollbars="vertical"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/displaySamplingDetails"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    android:text=""
                                    android:textSize="15sp"
                                    android:textStyle="bold">
                                </TextView>
                            </LinearLayout>
                        </ScrollView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="3">
                <TextView
                    android:id="@+id/scopeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:fillViewport="true"
                    android:scrollbars="vertical"
                    android:layout_weight="2">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/displayScopeDetailsStatus"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textSize="15sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>