...
    <string name="please_input_employee_id">Please input an employee id</string>
    <string name="please_input_serial_no">Please input a serial number</string>
    <string name="database_is_empty">Database is empty</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="wrong_scoped_scan_please_try_again">Wrong Scope scanned, please try again</string>

    <string name="cancel">cancel</string>

    <string-array name="spinner_items">
        <item>Brand</item>
        <item>Serial Number</item>
        <item>Scope Type</item>
        <item>Model Number</item>
...
